# mlx_local_stack

./: .gitignore  .gitmodules  Dockerfile  README.md  do_backup.py  docker-compose.yml  hf_sync.py  main_models.yaml  memory.md  memtest.py  openwebui_config.json  prompts.md  pyproject.toml  runserver.sh
openwebui-init/: _family_defaults.py  _splicer.py  advanced.py  init.py  models_config.json  profile_casual.py  profile_creative.py  profile_math.py  profile_research.py  profile_strict.py  publish_models.py  svgdump.py  thinking.py
searxng/: settings.yml
