[project]
name = "mlx-local-stack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "huggingface-hub",
  "mlx-lm",
  "mlx-openai-server",
  "mlx-vlm",
  "mlx-serve",
]

[tool.uv]
package = false

[tool.uv.sources]
mlx-vlm = { path = "./src/mlx-vlm", editable = true }
mlx-serve = { path = "./src/mlx-serve", editable = true }
